CRUD para gerenciar tarefas

--- a/pages/tasks/list.html
+++ b/pages/tasks/list.html
@@ -1,5 +1,8 @@
 <div class="container-fluid">
 <div class="col-md-8 col-lg-offset-2">
+
+    <alert-msg></alert-msg>
+
     <div class="panel panel-default">
         <div class="panel-body">
             <form name="form">
