CRUD para gerenciar tarefas

--- a/js/directives/alert.html
+++ b/js/directives/alert.html
@@ -1,4 +1,3 @@
-<div class="alert alert-success fade in">
-    <a href="#" class="close" data-dismiss="alert" aria-label="close" title="close">×</a>
+<div class="alert alert-success fade in am-position" role="alert" id="alert">
     Tarefa excluída com sucesso
 </div>
